--- a/layout.html
+++ b/layout.html
@@ -11,6 +11,7 @@
     li pre { margin-left: 30px; }
     h1,h2,h3,h4,h5,h6 { text-align: center; margin-bottom: 55px; }
     hr { border: 0; background: 0; margin-top: 800px; display: block; padding-bottom: 50px; }
+    a { color: #009900; }
   </style>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
   <script type="text/javascript">
