--- a/layout.html
+++ b/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>R^2 - Redis and Ruby in the wild</title>
+  <title>R² - Redis and Ruby in the wild</title>
   <meta name="http-equiv" content="text/html; charset=utf-8"/>
   <meta name="author" content="Kriss Kowalik, Krzysztof Knapik" />
   <style type="text/css">
@@ -10,7 +10,7 @@
     pre { margin-left: 45px; "Bitstream Vera Sans Mono", font-size: 200%; }
     li pre { margin-left: 30px; }
     h1,h2,h3,h4,h5,h6 { text-align: center; margin-bottom: 55px; }
-    hr { border: 0; background: 0; margin-top: 800px; display: block; padding-bottom: 50px; }
+    hr { border: 0; background: 0; margin-top: 800px; display: block; padding-bottom: 50px; page-break-after: always;}
     a { color: #009900; }
   </style>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
