--- a/layout.html
+++ b/layout.html
@@ -13,7 +13,7 @@
     hr { border: 0; background: 0; margin-top: 800px; display: block; padding-bottom: 50px; page-break-after: always;}
     a { color: #009900; }
   </style>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+  <script type="text/javascript" src="jquery-1.4.2.min.js"></script>
   <script type="text/javascript">
     var currentSlideNo = 0;
 
