--- a/slides.html
+++ b/slides.html
@@ -54,13 +54,9 @@
 
 <h3>28 September 2010</h3>
 
-<p><center>
-  <strong>Krzysztof Kowalik</strong> - Araneo <br />
-  kriss.kowalik@gmail.com</p>
+<p>-><strong>Krzysztof Kowalik</strong> (kriss.kowalik@gmail.com) - Araneo&lt;-</p>
 
-<p><strong>Krzysztof Knapik</strong> - Lunar Logic Polska <br />
-  knapo@knapo.net
-</center></p><hr id='slide-1' /><h2>Agenda</h2>
+<p>-><strong>Krzysztof Knapik</strong> (knapo@knapo.net) - Lunar Logic Polska&lt;-</p><hr id='slide-1' /><h2>Agenda</h2>
 
 <ul>
 <li>What is Redis and its main features</li>
